added include and link statements for compatibility with CentOS

--- a/assignment-4/Makefile
+++ b/assignment-4/Makefile
@@ -1,2 +1,2 @@
 passgenerator: passwordgen.c hashset.c
-	gcc -o passgenerator passwordgen.c hashset.c -I. -g
+	gcc -pthread -lm -o passgenerator passwordgen.c hashset.c -I. -g
